# llm_elm

./: .gitignore  README.md  pyproject.toml
doc/: hpelm_doc_alt.md  hpelm_docstring.md  hpelm_info.md  hpelm_readthedocs.md  hpelm_schema.py  hpelm_sphinx.txt
notebooks/: dev.py  example-deepseek.txt  experiments.pkl  hpelm_doc.md  merge.py  model_text_query.py  run.sh  run2.sh  test.py  test2.py  text_evals.py  text_plots.py  text_query.py
notebooks/context/: context_evals.py  context_plot.py  prompt_qwen2.5-coder:7b_177ea3f5-0ba5-4ef5-a62d-9205a12b15cb.pkl  prompt_qwen2.5-coder:7b_26a503ff-787e-4b51-90de-8f98d77866c1.pkl  prompt_qwen2.5-coder:7b_2e59f92f-e0cf-4366-916e-a7b40d8118d4.pkl  prompt_qwen2.5-coder:7b_34a982ee-4951-43a1-96cd-a1d5ee521ab6.pkl  prompt_qwen2.5-coder:7b_53f00319-ef73-4a57-b8d4-d3261c61c859.pkl  prompt_qwen2.5-coder:7b_5ada8852-4bb5-4e6c-844e-8f31deaffc82.pkl  run_context.sh
notebooks/experiments/: mnist_experiments_0074e4f3-682b-401f-8759-308280cb04e5.pkl  mnist_experiments_03a84868-ffc2-4b7d-9f31-4dd7057cc4d4.pkl  mnist_experiments_32f0f7cb-9e74-4e78-aa8b-ec72f2712060.pkl  mnist_experiments_52d1f337-c533-4e6f-add0-14ec08032fdf.pkl  mnist_experiments_657d8c3c-39d8-40b1-9c28-ccdaadf4f927.pkl  mnist_experiments_72e86d3b-f98a-4323-8611-e49cf5e21613.pkl  mnist_experiments_797dd42f-ddef-4daa-849c-efe67652531f.pkl  mnist_experiments_812ec2cf-bffd-48d2-bb0a-0ff3838e3154.pkl  mnist_experiments_888dca66-870a-4b06-855b-ca198fd76f37.pkl  mnist_experiments_bb9f2ff5-f750-40f9-8133-b8742b8282b3.pkl  mnist_experiments_ccce6dae-3338-478e-b858-e1f2b03e493b.pkl  (+193 more)
(+31 files in other folders)
