[project]
name = "llm-elm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Anton Akusok", email = "akusok.a@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "pydantic-ai>=0.0.55",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
