[project]
name = "llm-elm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Anton Akusok", email = "akusok.a@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "hpelm>=1.0.10",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "pydantic-ai>=0.0.55",
    "pydantic-evals>=0.0.55",
    "scikit-learn>=1.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
url = "https://pypi.zalando.net/repository/pypi/simple"
default = true
